# QEverCloudGenerator

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: build_and_deploy.yml
cmake/modules/: QEverCloudGeneratorCMakePolicies.cmake  QEverCloudGeneratorCompilerSettings.cmake  QEverCloudGeneratorSetupQt.cmake
lemon/: CMakeLists.txt  main.c
thrift/src/: Errors.thrift  Limits.thrift  NoteStore.thrift  Types.thrift  UserStore.thrift
thrift_parser/: CMakeLists.txt  Generator.cpp  Generator.h  Helpers.h  Lexer.cpp  Lexer.h  LocalFields.cpp  LocalFields.h  Parser.cpp  Parser.h  ParserHelper.h  main.cpp  thrift_lemon.y
